--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,6 @@
 <app-sidebar [(visible)]="sidebarVisible"></app-sidebar>
 
 <!-- Contenido -->
-<div class="p-4 md:p-6">
+<div>
   <router-outlet></router-outlet>
 </div>
