--- a/src/app/components/stores/store-personalization/store-personalization.component.html
+++ b/src/app/components/stores/store-personalization/store-personalization.component.html
@@ -1,53 +1,73 @@
-<div class="card">
-  <h2>Personalización de la Tienda</h2>
+<div class="max-w-md mx-auto bg-white  rounded-xl shadow-lg p-6 space-y-6">
+  <h2 class="text-xl font-bold mb-4">🎨 Personalización de la Tienda</h2>
 
-  <form [formGroup]="storeForm" (ngSubmit)="onSubmit()">
-    <div class="field">
-      <label for="primary">Color Primario:</label>
-      <i class="pi pi-palette"></i>
-
-      <!-- Selector con ngx-colors -->
-      <ngx-colors
-        ngx-colors-trigger
-        formControlName="primary_color"
-      ></ngx-colors>
-
-      <!-- Input PrimeNG para mostrar el valor -->
+  <form [formGroup]="storeForm" (ngSubmit)="onSubmit()" class="space-y-6">
+    <!-- Color Primario -->
+    <div>
+      <div class="flex items-center gap-3">
+        <label for="primary" class="font-medium text-gray-600">Color Primario</label>
+        <i class="pi pi-palette "></i>
+        <ngx-colors ngx-colors-trigger formControlName="primary_color"></ngx-colors>
+        <i
+          class="pi pi-question-circle text-slate-400 cursor-pointer ml-auto"
+          pTooltip="Color para iconos y textos resaltados"
+          tooltipPosition="right"
+        ></i>
+      </div>
       <p-inputText
         formControlName="primary_color"
         placeholder="Selecciona un color"
-        class="w-full mt-2"
+        class="w-full mt-3"
       />
-
-      <i
-        class="pi pi-question-circle"
-        pTooltip="Color para iconos y textos resaltados"
-        tooltipPosition="right"
-      ></i>
     </div>
 
-    <div class="field">
-      <label for="secondary">Color Secundario:</label>
-      <i class="pi pi-palette"></i>
-      <!-- Selector con ngx-colors -->
-      <ngx-colors
-        ngx-colors-trigger
-        formControlName="secondary_color"
-      ></ngx-colors>
-
-      <!-- Input PrimeNG para mostrar el valor -->
+    <!-- Color Secundario -->
+    <div>
+      <div class="flex items-center gap-3">
+        <label for="secondary" class="font-normal text-gray-600">Color Secundario</label>
+        <i class="pi pi-palette "></i>
+        <ngx-colors ngx-colors-trigger formControlName="secondary_color"></ngx-colors>
+        <i
+          class="pi pi-question-circle text-slate-400 cursor-pointer ml-auto"
+          pTooltip="Color para botones y links"
+          tooltipPosition="right"
+        ></i>
+      </div>
       <p-inputText
         formControlName="secondary_color"
         placeholder="Selecciona un color"
-        class="w-full mt-2"
+        class="w-full mt-3"
       />
-      <i
-        class="pi pi-question-circle"
-        pTooltip="Color para botones y links"
-        tooltipPosition="right"
-      ></i>
     </div>
 
-    <p-button size="small" type="submit" pButton label="Guardar cambios" />
+    <!-- Color de Fondo -->
+    <div>
+      <div class="flex items-center gap-3">
+        <label for="background" class="font-medium text-gray-600">Color de Fondo</label>
+        <i class="pi pi-palette "></i>
+      <p-selectButton
+  formControlName="background_color"
+  [options]="[
+    { label: 'Claro', value: 'white' },
+    { label: 'Oscuro', value: 'dark' }
+  ]"
+  optionLabel="label"
+  optionValue="value"
+  class="text-xs [&_.p-button]:!py-1 [&_.p-button]:!px-3 [&_.p-button]:!text-xs"
+></p-selectButton>
+        <i
+          class="pi pi-question-circle text-slate-400 cursor-pointer ml-auto"
+          pTooltip="Puedes alternar entre un fondo claro u oscuro"
+          tooltipPosition="right"
+        ></i>
+      </div>
+    </div>
+
+    <!-- Botón -->
+    <div class="pt-2 flex item-end justify-content-end">
+
+
+      <p-button size="small" label="Guardar cambios"  type="submit" [text]="true" [raised]="true" severity="success" />
+    </div>
   </form>
 </div>
